tests/ui/no-attribute-macro.stderr
error[E0038]: the trait `Trait` cannot be made into an object
  --> tests/ui/no-attribute-macro.rs:12:12
   |
12 |     let _: &dyn Trait;
   |            ^^^^^^^^^^ `Trait` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> tests/ui/no-attribute-macro.rs:2:14
   |
1  | pub trait Trait {
   |           ----- this trait cannot be made into an object...
2  |     async fn method(&self);
   |              ^^^^^^ ...because method `method` is `async`
   = help: consider moving `method` to another trait
